@@ -28,7 +28,7 @@
         </py:choose>
       </div>
 
-      <form method="post">
+      <form method="post" action="${url}">
       <fieldset>
         <legend>
           <label>Account Status</label>
